--- a/TextWarp/Views/Shared/_EditorLayout.cshtml
+++ b/TextWarp/Views/Shared/_EditorLayout.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="align-items-center d-flex justify-content-center w-100" style="position:fixed;top: 0;left: 0;color:#fff;z-index:101;">
                 <div class="d-flex flex-column">
-                    <div class="align-items-center d-flex justify-content-between" id="save_send" style="width:160px;">
+                    <div class="align-items-center d-flex justify-content-between" id="save_send" style="width:160px;cursor:pointer;">
                         <div>Save and send</div>
                         <div><i class="fa-solid fa-angle-down"></i></div>
                     </div>
@@ -53,6 +53,20 @@
                 <stop offset="0%" id="first_color" stop-color="#6b6fff" />
                 <stop offset="100%" id="second_color" stop-color="#bc91c1" />
             </linearGradient>
+            <filter id="contrast0">
+                <feComponentTransfer>
+                    <feFuncR type="linear" slope="1" />
+                    <feFuncG type="linear" slope="1" />
+                    <feFuncB type="linear" slope="1" />
+                </feComponentTransfer>
+            </filter>
+            <filter id="contrast1">
+                <feComponentTransfer>
+                    <feFuncR type="linear" slope="1" />
+                    <feFuncG type="linear" slope="1" />
+                    <feFuncB type="linear" slope="1" />
+                </feComponentTransfer>
+            </filter>
         </defs>
     </svg>
     <div class="align-items-center justify-content-center w-100 h-100" id="loader" style="background: transparent !important;opacity: 1;">
