changed some styles

--- a/TextWarp/Views/Warp/Editor.cshtml
+++ b/TextWarp/Views/Warp/Editor.cshtml
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div id="filterToolBox" class="toolBox-theme flex-column" style="z-index:101;">
-                    <div class="default-text" style="font-size: 22px;margin-bottom: 10px;">
+                    <div class="default-text" style="font-size: 22px;">
                         Filters
                     </div>
                     <div class="default-text" style="font-size: 18px;">
