--- a/TextWarp/Views/Warp/Index.cshtml
+++ b/TextWarp/Views/Warp/Index.cshtml
@@ -11,7 +11,7 @@
 <input type="hidden" id="words" value="@Model.words" />
 <input type="hidden" id="styleIndex" value="@Model.styleIndex" />
 <input type="hidden" id="message" value="@Model.msg" />
-<input type="hidden" id="initColors" value="@Model.initColors"/>
+<input type="hidden" id="colorPairs" value="@Model.colorPairs" />
 <button id="btn_warpText" style="display:none;"></button>
 <button id="btn_warpEndHandler" style="display:none"></button>
 <div class="d-flex justify-content-center" style="position:relative;width: 100%;">
