--- a/TextWarp/Views/Warp/Finalize.cshtml
+++ b/TextWarp/Views/Warp/Finalize.cshtml
@@ -5,3 +5,26 @@
     ViewData["title"] = "Finalize";
     Layout = "~/Views/Shared/_FinalizeLayout.cshtml";
 }
+<div class="d-flex flex-column" style="padding: 0 24px 24px 24px;background:#f6f7f8;">
+    <div class="w-100">
+        <div style="width: 300px; height:200px;">
+            <img src="/imgs/embrance.png" class="mw-100"/>
+        </div>
+        <div class="d-flex flex-column align-items-start">
+            <div>Use your design with any of our tools.</div>
+            <div>
+                <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                     tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse
+                     ultrices gravida.    Or simply <a>download</a> here.
+                 </pre>
+            </div>
+        </div>
+    </div>
+    <div style="flex:1">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="card-view"></div>
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+        </div>
+    </div>
+</div>
