--- a/TextWarp/Views/Warp/Editor.cshtml
+++ b/TextWarp/Views/Warp/Editor.cshtml
@@ -169,7 +169,7 @@
                                 <tc-range-slider id="sli_stroke_hue" data-default-value="1" data-shower-id="stroke_hue" min="1" max="360" value="1"
                                                  slider-width="100%" slider-height="3px" pointer-width="16px"
                                                  pointer-height="16px" slider-bg="linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 16.666%, rgb(0, 255, 0) 33.333%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 66.666%, rgb(255, 0, 255) 83.333%, rgb(255, 0, 0) 100%)"
-                                                 slider-bg-hover="None"
+                                                 slider-bg-hover="linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 16.666%, rgb(0, 255, 0) 33.333%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 66.666%, rgb(255, 0, 255) 83.333%, rgb(255, 0, 0) 100%)"
                                                  slider-bg-fill="None"
                                                  pointer-bg="#14bdff" pointer-bg-hover="#14bdff" pointer-bg-focus="#14bdff" pointer-border="None">
                                 </tc-range-slider>
