--- a/TextWarp/Views/Warp/Finalize.cshtml
+++ b/TextWarp/Views/Warp/Finalize.cshtml
@@ -22,7 +22,9 @@
     </div>
     <div style="flex:1">
         <div class="d-flex justify-content-between align-items-center">
-            <div class="card-view"></div>
+            <div class="card-view col-md-6 col-sm-12" style="">
+
+            </div>
         </div>
         <div class="d-flex justify-content-between align-items-center">
         </div>
