add gallery button save function

--- a/TextWarp/Views/Shared/_EditorLayout.cshtml
+++ b/TextWarp/Views/Shared/_EditorLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-@{string version = "1.01";}
+@{string version = "5.08";}
 <html>
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
             <div class="align-items-center d-flex justify-content-center w-100" style="position:fixed;top: 0;left: 0;color:#fff;height:48px;">
                 <div class="d-flex">
                     <a href="/warp/createnew/" class="btn-head-action">Edit Info</a>
-                    <a href="/gallery/" class="btn-head-action">Gallery</a>
+                    <a href="#" id="btn_goto_gallery" class="btn-head-action">Gallery</a>
                     <a class="btn-head-action">Sign in</a>
                 </div>
             </div>
