--- a/TextWarp/wwwroot/css/stylesheet.css
+++ b/TextWarp/wwwroot/css/stylesheet.css
@@ -873,11 +873,12 @@ a:link, a:visited, a:hover {
     text-align: center;
 }
 .logo-container {
-    width: 100%;
-    height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.logo-container img{
+    height: 25px;
 }
 #like_svgs::-webkit-slider-runnable-track {
     background: linear-gradient(to right, #000, #fff);
