working on finalize

--- a/TextWarp/Views/Shared/_EditorLayout.cshtml
+++ b/TextWarp/Views/Shared/_EditorLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-@{string version = "5.08";}
+@{string version = "5.10";}
 <html>
 <head>
     <meta charset="UTF-8">
@@ -57,9 +57,9 @@
             </filter>
         </defs>
     </svg>
-    <div class="align-items-center justify-content-center w-100 h-100" id="loader" style="background: transparent !important;opacity: 1;">
+    <div id="loader" style="display: none;">
         <div>
-            <img src="~/imgs//loading.svg" style="width:80px;height:80px;"/>
+            <img src="~/imgs//loading.svg"/>
         </div>
     </div>
     @{
