--- a/TextWarp/Views/Shared/_FinalizePartialView.cshtml
+++ b/TextWarp/Views/Shared/_FinalizePartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.Extensions.Configuration
 @inject IConfiguration Configuration
-<div class="partial-finalize active">
+<div class="partial-finalize">
     <div class="editor-header">
         <div class="header-logo">
             <a id="btn_back_eidtor_view">
